notepad: Fix CSS bug in spacing .modify-buttons. - The previous rule fixed excessive vertical space after the buttons and made them centered. - But it removed space needed to vertically separate wrapped buttons. - This removes the extra space from where it's not needed, but preserves it when it is.

--- a/notepad/static/notepad/css/notepad.css
+++ b/notepad/static/notepad/css/notepad.css
@@ -53,8 +53,8 @@ pre.content {
   margin-bottom: 30px;
 }
 
-.modify-buttons button {
-  margin-bottom: 0;
+li.modify-buttons {
+  padding-bottom: 0;
 }
 
 textarea[name="content"] {
